Closed
Bug 1673864
Opened 5 years ago
Closed 5 years ago
Linux scrollbar painting with non-native theme broke.
Categories
(Core :: Widget, defect)
Core
Widget
Tracking
()
RESOLVED
FIXED
84 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox82 | --- | unaffected |
| firefox83 | --- | unaffected |
| firefox84 | --- | fixed |
People
(Reporter: emilio, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
pretty sure this is is due to bug 1673121 and/or bug 1673287
| Assignee | ||
Comment 1•5 years ago
|
||
Well, not the range one most likely.
No longer regressed by: 1673287
Updated•5 years ago
|
Has Regression Range: --- → yes
| Assignee | ||
Comment 2•5 years ago
|
||
| Assignee | ||
Comment 3•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → emilio
Status: NEW → ASSIGNED
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/22f92c8800e1
Fix vertical scrollbar thumb drawing on GTK's non-native theme. r=mstange
Comment 5•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox84:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch
Comment 6•5 years ago
|
||
Set release status flags based on info from the regressing bug 1673121
status-firefox82:
--- → unaffected
status-firefox83:
--- → unaffected
status-firefox-esr78:
--- → unaffected
Updated•5 years ago
|
Keywords: regression
You need to log in
before you can comment on or make changes to this bug.
Description
•