Bug 1673864 - Fix vertical scrollbar thumb drawing on GTK's non-native theme. r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D94988